# motor_controller

./: CMakeLists.txt  README.md  package.xml
launch/: initial_motors.launch  motors.launch  second_motors.launch
msg/: legHeights.msg
params/: params.yaml  params_saved.yaml
src/: dynamixel_controller.py  turn_motor.py  zero_motors.py
srv/: GetPosition.srv
