<?xml version="1.0"?>
<package format="2">
  <name>motor_controller</name>
  <version>1.0.0</version>
  <description>Package to control Dynamixels</description>

  <maintainer email="team1@todo.todo">team1</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>dynamixel_sdk</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
